Adding some basic configuration to the django app.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
 Django==1.6.4
+South==0.8.4
 argparse==1.2.1
+boto==2.27.0
+dj-database-url==0.3.0
+django-herokuapp==0.9.18
+django-require==1.0.6
+django-require-s3==1.0.0
+django-storages==1.1.8
+psycopg2==2.5.2
+pytz==2014.2
+sh==1.09
+waitress==0.8.8
 wsgiref==0.1.2
